--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <div class="nav-modules">
     <ul>
         <li>
-            <a href="{{ site.baseurl }}">Bellows</a>
+            <a href="{{ site.baseurl }}">Magnifik</a>
             <ul>
                 <li><a href="{{ site.baseurl }}#usage">Usage</a></li>
                 <li><a href="{{ site.baseurl }}#methods">Methods</a></li>
