--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -14,7 +14,7 @@
     <meta name="author" content="Mobify">
     <meta name="description" content="A responsive, mobile first accordion UI module from Mobify">
     <meta name="keywords" content="mobify,mobile,modules,ui,responsive,bellows,accordion">
-    <title>Bellows</title>
+    <title>Magnifik</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/bootstrap.css">
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/syntax.css">
@@ -59,7 +59,7 @@
     <div class="viewport">
         <div class="navbar row-fluid">
             <div class="navbar-inner"> 
-                <a href="{{ site.baseurl }}"><h1>Bellows</h1></a>
+                <a href="{{ site.baseurl }}"><h1>Magnifik</h1></a>
 
 
             </div><!-- .navbar-inner -->
