fixed js issues

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta name="author" content="Mobify">
     <meta name="description" content="A responsive, mobile first accordion UI module from Mobify">
-    <meta name="keywords" content="mobify,mobile,modules,ui,responsive,bellows,accordion">
+    <meta name="keywords" content="mobify,mobile,modules,ui,responsive,zoomable,magnifik">
     <title>Magnifik</title>
 
     <link rel="stylesheet" href="{{ site.baseurl }}static/css/bootstrap.css">
@@ -89,7 +89,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="//github.com/mobify/bellows" title="Mobify on Github">
+                        <a href="//github.com/mobify/magnifik" title="Mobify on Github">
                             <i class="icon-github"></i>Github
                         </a>
                     </li>
@@ -107,11 +107,6 @@
     });
 </script>
 <script src="{{ site.baseurl }}static/js/highlight/highlight.pack.js"></script>
-<script src="http://cdn.mobify.com/modules/bellows/0.3.0/bellows.min.js"></script>
-
-<script>
-    $(function() { $('.m-bellows').bellows(); });
-</script>
 
 <script>hljs.initHighlightingOnLoad();</script>
 </body>
