--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -5,9 +5,10 @@
             <ul>
                 <li><a href="{{ site.baseurl }}#usage">Usage</a></li>
                 <li><a href="{{ site.baseurl }}#methods">Methods</a></li>
-                <li><a href="{{ site.baseurl }}#class-names">Class Names</a></li>
-                <li><a href="{{ site.baseurl }}#event-hooks">Event Hooks</a></li>
-                <li><a href="{{ site.baseurl }}#browser-support">Browser Support</a></li>
+                <li><a href="{{ site.baseurl }}#configuration">Configuration</a></li>
+                <li><a href="{{ site.baseurl }}#default-styles">Default Styles</a></li>
+                <li><a href="{{ site.baseurl }}#events">Classes</a></li>
+                <li><a href="{{ site.baseurl }}#events">Events</a></li>
                 <li><a href="{{ site.baseurl }}examples/">Examples</a></li>
             </ul>
         </li>
